--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
 
-  <head><title>The @rssgmanews@mastodon.social account project</title></head>
+  <head><title>The @rssphilstarglobal@mastodon.social account project</title></head>
 <body>
 
-<h1>The @rssgmanews@mastodon.social account project</h1>
-<p>This project is created to simply deliver the news from GMA Integrated News to Mastodon and other Fediverse users.</p>
+<h1>The @rssphilstarglobal@mastodon.social account project</h1>
+<p>This project is created to simply deliver the news from PhilStar Global to Mastodon and other Fediverse users.</p>
 
-<a href="https://github.com/thedoggybrad/rssgma">Project Repository</a>
+<a href="https://github.com/thedoggybrad/rssphilstarglobal">Project Repository</a>
 
-<a style="visibility:hidden" rel="me" href="https://mastodon.social/@rssgma">Mastodon</a>
-
+<a rel="me" href="https://mastodon.social/@rssphilstarglobal">Mastodon</a>
 </body>
 </html>
 
