--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 
-  <head><title>The @rssphilstarglobal@mastodon.social account project</title></head>
+  <head><title>The @rssmanilabulletin@mastodon.social account project</title></head>
 <body>
 
-<h1>The @rssphilstarglobal@mastodon.social account project</h1>
-<p>This project is created to simply deliver the news from PhilStar Global to Mastodon and other Fediverse users.</p>
+<h1>The @rssmanilabulletin@mastodon.social account project</h1>
+<p>This project is created to simply deliver the news from Manila Bulletin to Mastodon and other Fediverse users.</p>
 
-<a href="https://github.com/thedoggybrad/rssphilstarglobal">Project Repository</a>
+<a href="https://github.com/thedoggybrad/rssmanilabulletin">Project Repository</a>
 
-<a rel="me" href="https://mastodon.social/@rssphilstarglobal">Mastodon</a>
+<a rel="me" href="https://mastodon.social/@rssmanilabulletin">Mastodon</a>
 </body>
 </html>
 
